--- a/index.html
+++ b/index.html
@@ -7,14 +7,21 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body class="corpo-fundo">
-    <h1>Faça sua decisão</h1>
+    <div class="fundo-apresentacao">
+        <div class="corpo-apresentacao">
+            <h1>Seja bem-vindo</h1>
+            <h2>Escolha uma das frentes deste porfólio</h2>
+        </div>
+    </div>
     <div class="content">
         <div class="content-images">
             <a class="ia" href="">
                 <img src="/img/entrada/homem-f.png" alt="">
+                <p>Desenvolvimento</p>
             </a>
             <a class="desenv" href="">
                 <img src="/img/entrada/deus-f.png" alt="">
+                <p>Inteligência Artificial</p>
             </a>
         </div>
     </div>
